# eclipse_OZ

./: ._DOCUMENTATION.md  ._Manuel d'utilisation.md  ._README.md  .gitignore  Changelog  DOCUMENTATION.md  MLua_PIC.sh  MLua_Test.sh  MLua_mount_imgSD.sh  Manuel d'utilisation.md  PLAN_MIGRATION_PYTHON_GPHOTO2.md  PR_DESCRIPTION.md  README.md  SOLARECL.TXT  eclipse_OZ.lua  prompt_documentation.md
python/: ._DOCUMENTATION_PYTHON.md  ._GUIDE_FONCTIONNEMENT.md  DOCUMENTATION_PYTHON.md  GUIDE_FONCTIONNEMENT.md  README.md  VALIDATION_COHERENCE_LUA_PYTHON.md  __init__.py  config_eclipse.txt  deploy.sh  install.sh  lua_simulator.py  main.py  pyproject.toml  rapport.txt  requirements.txt  run_comparison_tests.py  run_regression_tests.sh  test_comparison_final.py  test_lua_simple.py  test_quick.sh  test_simple_comparison.py
python/config/: __init__.py  config_parser.py  eclipse_config.py
python/hardware/: __init__.py  camera_controller.py  multi_camera_manager.py
python/scheduling/: __init__.py  action_scheduler.py  action_types.py  time_calculator.py
python/tests/: __init__.py  test_action_scheduler.py  test_behavior_compatibility.py  test_camera_controller.py  test_complete_regression.py  test_config_parser.py  test_integration.py  test_lua_python_comparison.py  test_lua_python_comparison_new.py  test_migration_validation.py  test_time_calculator.py
python/utils/: __init__.py  constants.py  logger.py  validation.py
